umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_nh2oh.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: Dw_
    atoms:
      - "N#n#v3"
      - "O#n2#v2"
      - "H#v"
      - "H#v"
      - "H#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: Dw_
    atoms:
      - "N#n#v3"
      - "O#n2#v2"
      - "H#v"
      - "H#v"
      - "H#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
