umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_no2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bo
    atoms:
      - "N#c+#u#v3"
      - "O#n2#v2"
      - "O#c-#n3#v"
    bonds:
      - "="
      - "-"
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bo
    atoms:
      - "N#c+#u#v3"
      - "O#n2#v2"
      - "O#c-#n3#v"
    bonds:
      - "="
      - "-"
